query-compiler/query-compiler/tests/snapshots/queries__queries@create-nested-connectOrCreate-one2m.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/create-nested-connectOrCreate-one2m.json
---
transaction
   dataMap {
       id: Int (id)
       title: String (title)
       userId: Int (userId)
       user (from @nested$user): {
           id: Int (id)
           email: String (email)
           role: Enum<Role> (role)
       }
       categories (from @nested$categories): {
           id: Int (id)
           name: String (name)
       }
   }
   enums {
       Role: {
           admin: ADMIN
           user: USER
       }
   }
   let 1 = unique (query «SELECT "public"."User"."id" FROM "public"."User" WHERE
                          ("public"."User"."id" = $1 AND 1=1) LIMIT $2 OFFSET
                          $3»
                   params [const(BigInt(1)), const(BigInt(1)),
                           const(BigInt(0))])
   in let 1 = unique (validate (get 1)
          [ rowCountNeq 0
          ] orRaise "MISSING_RELATED_RECORD");
          1$id = mapField id (get 1)
      in let 0 = unique (query «INSERT INTO "public"."Post" ("title","userId")
                                VALUES ($1,$2) RETURNING "public"."Post"."id"»
                         params [const(String("How to get rich quick and not go to jail")),
                                 var(1$id as Int)])
         in let 2 = unique (query «SELECT "public"."Category"."id" FROM
                                   "public"."Category" WHERE
                                   ("public"."Category"."id" = $1 AND 1=1) LIMIT
                                   $2 OFFSET $3»
                            params [const(BigInt(10)), const(BigInt(1)),
                                    const(BigInt(0))])
            in let 4 = if (rowCountNeq 0 (get 2))
                   then get 2
                   else unique (query «INSERT INTO "public"."Category"
                                       ("id","name") VALUES ($1,$2) RETURNING
                                       "public"."Category"."id"»
                                params [const(BigInt(10)),
                                        const(String("JavaScript"))])
               in let 0 = unique (validate (get 0)
                      [ rowCountNeq 0
                      ] orRaise "MISSING_RELATED_RECORD");
                      0$id = mapField id (get 0);
                      4 = validate (get 4)
                      [ rowCountEq 1
                      ] orRaise "INCOMPLETE_CONNECT_INPUT";
                      4$id = mapField id (get 4)
                  in execute «INSERT INTO "public"."_CategoryToPost" ("B","A")
                              VALUES [($1),*],* ON CONFLICT DO NOTHING»
                     params [product(var(0$id as Int[]), var(4$id as Int[]))];
            let 0 = unique (validate (get 0)
                [ rowCountNeq 0
                ] orRaise "MISSING_RECORD");
                0$id = mapField id (get 0)
            in let @parent = unique (query «SELECT "public"."Post"."id",
                                            "public"."Post"."title",
                                            "public"."Post"."userId" FROM
                                            "public"."Post" WHERE
                                            "public"."Post"."id" = $1 LIMIT $2
                                            OFFSET $3»
                                     params [var(0$id as Int), const(BigInt(1)),
                                             const(BigInt(0))])
               in let @parent$id = mapField id (get @parent);
                      @parent$userId = mapField userId (get @parent)
                  in join (get @parent)
                     with (query «SELECT "public"."User"."id",
                                  "public"."User"."email",
                                  "public"."User"."role"::text FROM
                                  "public"."User" WHERE "public"."User"."id" =
                                  $1 OFFSET $2»
                           params [var(@parent$userId as Int),
                                   const(BigInt(0))]) on unique left.(userId) = right.(id) as @nested$user,
                          (query «SELECT "public"."Category"."id",
                                  "public"."Category"."name", "t0"."B" AS
                                  "CategoryToPost@Post" FROM "public"."Category"
                                  INNER JOIN "public"."_CategoryToPost" AS "t0"
                                  ON "t0"."A" = "public"."Category"."id" WHERE
                                  (1=1 AND "t0"."B" = $1) OFFSET $2»
                           params [var(@parent$id as Int),
                                   const(BigInt(0))]) on left.(id) = right.(CategoryToPost@Post) as @nested$categories
