query-compiler/query-compiler/tests/snapshots/queries__queries@nested-distinct-join.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/nested-distinct-join.json
---
dataMap {
    id: Int (id)
    posts (from posts): {
        id: Int (id)
        title: String (title)
    }
}
query «SELECT "t0"."id", "User_posts"."__prisma_data__" AS "posts" FROM
       "public"."User" AS "t0" LEFT JOIN LATERAL (SELECT
       COALESCE(JSONB_AGG("__prisma_data__"), '[]') AS "__prisma_data__" FROM
       (SELECT DISTINCT ON ("t3"."title") "t3"."__prisma_data__" FROM (SELECT
       JSONB_BUILD_OBJECT('id', "t2"."id", 'title', "t2"."title") AS
       "__prisma_data__", "t2"."title", "t2"."userId" FROM (SELECT "t1".* FROM
       "public"."Post" AS "t1" WHERE "t0"."id" = "t1"."userId" /* root select
       */) AS "t2" /* inner select */) AS "t3" /* middle select */) AS "t4" /*
       outer select */) AS "User_posts" ON true»
params []
