query-compiler/query-compiler/tests/snapshots/queries__queries@query-m2o.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
assertion_line: 76
expression: pretty
input_file: query-compiler/query-compiler/tests/data/query-m2o.json
snapshot_kind: text
---
rawNestedRead (query «SELECT "public"."Activation"."id",
                      "public"."Activation"."issued",
                      "public"."Activation"."secret",
                      "public"."Activation"."done",
                      "public"."Activation"."userId" FROM "public"."Activation"
                      WHERE 1=1 OFFSET $1»
               params [const(BigInt(0))]
               fields {
                   issued: 1
                   secret: 2
                   done: 3
               }
               relations [user on left.4 = right.0 unique (query «SELECT
                                                                  "public"."User"."id",
                                                                  "public"."User"."email"
                                                                  FROM
                                                                  "public"."User"
                                                                  WHERE
                                                                  "public"."User"."id"
                                                                  IN [$1,*]
                                                                  OFFSET $2»
                                                           params [var(@parent$userId as Int),
                                                                   const(BigInt(0))]
                                                           fields {
                                                               id: 0
                                                               email: 1
                                                           })])
